# caribou

./: .gitignore  .project  Makefile.am  NEWS  README  autogen.sh  caribou.doap  configure.ac
caribou/: Makefile.am  __init__.py  const.py  i18n.py.in  keyboard.py  main.py  window.py
caribou/antler/: Makefile.am  antler_settings.py  keyboard_view.py  main.py  window.py
caribou/common/: Makefile.am  const.py  setting_types.py  settings.py  settings_manager.py
caribou/daemon/: Makefile.am  __init__.py  main.py
caribou/keyboards/: Makefile.am  __init__.py  qwerty_es.py
caribou/settings/: Makefile.am  caribou_settings.py  preferences_window.py  setting_types.py  settings_manager.py
caribou/ui/: Makefile.am  animation.py  i18n.py.in  keyboard.py  main.py  opacity.py  preferences_window.py  scan.py  window.py
daemon/: Makefile.am  daemon.vala
data/: Makefile.am  caribou-autostart.desktop.in  caribou-autostart.desktop.in.in  caribou-prefs.ui  caribou.desktop.in  caribou.schemas  org.gnome.Caribou.Antler.service.in  org.gnome.Caribou.Daemon.service.in
data/antler/: Makefile.am  style.css
data/keyboards/: Makefile.am  hebrew.xml  lexic_es.json  qwerty.xml  qwerty_en.json  qwerty_es.json  qwerty_ja.xml
data/layouts/: Makefile.am
data/layouts/fullscale/: Makefile.am  bg+phonetic.xml.in  bg.xml.in  de.xml.in
data/layouts/fullscale/common/: qwerty.xml  qwertz.xml  symbols.xml
data/layouts/natural/: Makefile.am  ara.json  il.json  us.json
data/layouts/scan/: Makefile.am  us.json
data/layouts/tablet/: Makefile.am  bg+phonetic.xml.in  bg.xml.in  de.xml.in  us.xml.in
data/layouts/tablet/common/: qwerty.xml  qwertz.xml  symbols.xml  symbols_ssharp.xml
data/layouts/touch/: Makefile.am  ara.json  ara.xml  ara.xml.in  bg+phonetic.xml.in  bg.xml.in  cs.xml.in  fr.xml.in  hu.xml.in  il.json  il.xml  il.xml.in  ru.xml.in  us.json  us.xml
data/layouts/touch/common/: azerty.xml  qwerty.xml  qwertz.xml  symbols.xml
docs/: Makefile.am
im/: Makefile.am
im/gtk2/: Makefile.am  caribou-im.c  caribou-imcontext.vala
im/gtk3/: Makefile.am  caribou-im.c  caribou-imcontext.vala  vapi-fixes.vapi
libcaribou/: Makefile.am  caribou-marshal.list  caribou-virtual-keyboard.c  caribou-virtual-keyboard.h  caribou.h  caribou.pc.in  column-model.vala  config.vapi  display-adapter.vala  external-libs.vapi  group-model.vala  ikeyboard-object.vala  iscannable-group.vala  iscannable-item.vala  json-deserializer.vala  key-model.vala  keyboard-model.vala  keyboard-service.vala  level-model.vala  libxklavier.vapi  row-model.vala  scannable-group.vala  scanner.vala  util.vala  xadapter.vala  xml-deserializer.vala
modules/: Makefile.am
modules/gtk2/: Makefile.am  caribou-gtk-module.vala  caribou-gtk-modules.vala  caribou-module.c  vapi-fixes.vapi
modules/gtk3/: Makefile.am  caribou-gtk-module.vala  caribou-gtk-modules.vala  caribou-module.c  vapi-fixes.vapi
po/: LINGUAS  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  ht.po  hu.po  id.po  it.po  ja.po  kk.po  km.po  kn.po  ko.po  (+35 more)
src/: caribou.py  keyboard.py  keyboardcommon.py  keysyms.py  qwerty.py
src/caribou/: animation.py  caribou-prefs.ui  keyboard.py  main.py  opacity.py  window.py
src/caribou/keyboards/: __init__.py  keysyms.py  qwerty.py  qwerty_sv.py
tools/: Makefile.am  basic.xsl  convert_cldr.py  fix_gir.py  make_schema.py
vapi/: Makefile.am  atspi-2.vapi  config.vapi  external-libs.vapi
